--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,13 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "axios": "^1.12.1",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
+    "recharts": "^3.2.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -45,6 +48,7 @@
   "devDependencies": {
     "@craco/craco": "^7.1.0",
     "@tailwindcss/postcss7-compat": "^2.2.17",
+    "@types/recharts": "^1.8.29",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.13"
